# NewsScrap

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: .env.example  config.yaml
config/profiles/: news.yaml  quotes.yaml
notebooks/: AI_신뢰성_문제.ipynb  Chat_GPT-4o.ipynb
scripts/: run_pipeline.py  run_scrape.py  run_summarize.py  youtube_auth.py
src/: pipeline.py  pipeline_quotes.py
src/config/: profile_loader.py
src/content/: quotes_picker.py
src/scraper/: article_crawler.py  dedup.py  rate_limiter.py  rss_fetcher.py
src/scraper/parsers/: aitimes.py  base_parser.py  chosun.py  etnews.py  generic.py  hankyung.py
src/storage/: json_store.py  models.py
src/subtitles/: subtitle_generator.py
src/summarizer/: base.py  claude_provider.py  factory.py  ollama_provider.py  openai_provider.py  prompt_templates.py
src/tts/: base.py  edge_tts_provider.py  factory.py  google_tts_provider.py
src/uploader/: youtube_uploader.py
src/video/: background.py  composer.py
